# wakir-verify

./: .gitignore  NOTICE  README.md  REUSE.toml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  license-check.yml  release.yml
tests/: fixtures.py  test_aggregator.py  test_cli.py  test_cli_text_mode.py  test_manifest.py  test_merkle_proof.py  test_multi_pol_determinismus.py  test_poles.py  test_property_hypothesis.py  test_python_bitcoinlib_drift.py  test_witness_captures.py
tests/fixtures/witness_captures/: 2026-05-13-block-948183-tampered-mock.json  2026-05-13-block-948183.json  README.md
wakir_verify/: __init__.py  aggregator.py  bitcoin_header.py  cli.py  format.py  manifest.py  merkle_proof.py  ots_verify.py  poles.py  types.py
